# rhymepass

./: .gitignore  .sourcery.yaml  AGENTS.md  LICENSE  README.md  main.py  mise.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml
.trunk/: trunk.yaml
src/rhymepass/: __init__.py  anchors.py  batch.py  cli.py  clipboard.py  generator.py  phrases.py  randomgen.py  strength.py  ui.py  wordbanks.py
tests/: conftest.py  test_anchors.py  test_batch.py  test_cli.py  test_clipboard.py  test_generator.py  test_phrases.py  test_random.py  test_strength.py  test_ui.py  test_wordbanks.py
