[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "rhymepass"
description = "Generate memorable, rhyming passphrases with an interactive terminal picker."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Dave Williams", email = "syn@syn.as" }]
keywords = ["passphrase", "password", "rhyme", "cli", "tui", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = ["english-words>=2.0.2", "pronouncing>=0.3.0", "textual>=0.80"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/synmux/rhymepass"
Source = "https://github.com/synmux/rhymepass"
Issues = "https://github.com/synmux/rhymepass/issues"

[project.scripts]
rhymepass = "rhymepass.cli:main"
rp = "rhymepass.cli:main"

[tool.hatch.version]
path = "src/rhymepass/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rhymepass"]

[tool.hatch.build.targets.sdist]
include = ["src/rhymepass", "tests", "README.md", "LICENSE", "AGENTS.md"]

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
